force-app/main/default/objects/NI_Documentation__c/fields/Outstanding_Issues__c.field-meta.xml
<CustomField>
    <fullName>Outstanding_Issues__c</fullName>
    <description>Salesforce.com Change Request: NICC-007494

Description of outstanding issues that require follow-up</description>
    <encryptionScheme>None</encryptionScheme>
    <inlineHelpText>Description of outstanding issues that require follow-up</inlineHelpText>
    <label>Outstanding Issues</label>
    <length>32768</length>
    <type>LongTextArea</type>
</CustomField>