force-app/main/default/objects/NI_Documentation__c/fields/Password__c.field-meta.xml
<CustomField>
    <fullName>Password__c</fullName>
    <description>Password for managed/unmanaged package</description>
    <encryptionScheme>None</encryptionScheme>
    <inlineHelpText>Password for managed/unmanaged package</inlineHelpText>
    <label>Password</label>
    <length>30</length>
    <type>Text</type>
</CustomField>