force-app/main/default/objects/NI_Documentation__c/fields/Private_Offer_Enabled__c.field-meta.xml
<CustomField>
    <fullName>Private_Offer_Enabled__c</fullName>
    <businessOwnerUser>shuebner@newmarketinc.com</businessOwnerUser>
    <description>NICC-062947</description>
    <label>Private Offer Enabled</label>
    <type>Picklist</type>
    <valueSet>
        <restricted>true</restricted>
        <valueSetDefinition>
            <value>
                <fullName>Yes</fullName>
            </value>
            <value>
                <fullName>No</fullName>
            </value>
        </valueSetDefinition>
    </valueSet>
</CustomField>