force-app/main/default/objects/NI_Documentation__c/fields/Product_Version__c.field-meta.xml
<CustomField>
    <fullName>Product_Version__c</fullName>
    <description>The earliest version the HRM Solution applies to</description>
    <encryptionScheme>None</encryptionScheme>
    <inlineHelpText>Enter the earliest version the HRM Solution applies to</inlineHelpText>
    <label>Product Version</label>
    <length>10</length>
    <type>Text</type>
</CustomField>