force-app/main/default/objects/NI_Documentation__c/fields/Project__c.field-meta.xml
<CustomField>
    <fullName>Project__c</fullName>
    <deleteConstraint>SetNull</deleteConstraint>
    <description>Added to change set NICC-036103</description>
    <inlineHelpText>The FinancialForce - PSA Project that this record is related to</inlineHelpText>
    <label>Project</label>
    <referenceTo>pse__Proj__c</referenceTo>
    <relationshipLabel>NI Documentation</relationshipLabel>
    <relationshipName>NI_Related_Documentation</relationshipName>
    <type>Lookup</type>
</CustomField>