force-app/main/default/objects/NI_Documentation__c/fields/Project_Manager__c.field-meta.xml
<CustomField>
    <fullName>Project_Manager__c</fullName>
    <deleteConstraint>SetNull</deleteConstraint>
    <description>Salesforce.com Change Request: NICC-007494

Project Manager for the PSA Project</description>
    <inlineHelpText>Project Manager for the PSA Project</inlineHelpText>
    <label>Project Manager</label>
    <referenceTo>Contact</referenceTo>
    <relationshipLabel>NI Documentation</relationshipLabel>
    <relationshipName>NI_Documentation</relationshipName>
    <type>Lookup</type>
</CustomField>