force-app/main/default/objects/NI_Documentation__c/fields/Sign_Off_Due_Date__c.field-meta.xml
<CustomField>
    <fullName>Sign_Off_Due_Date__c</fullName>
    <defaultValue>TODAY() + 5</defaultValue>
    <description>Due date for the signed configuration to be returned to NI</description>
    <encryptionScheme>None</encryptionScheme>
    <inlineHelpText>Due date for the signed configuration to be returned to NI</inlineHelpText>
    <label>Sign-Off Due Date</label>
    <type>Date</type>
</CustomField>