force-app/main/default/objects/NI_Documentation__c/fields/Sign_Off_Received__c.field-meta.xml
<CustomField>
    <fullName>Sign_Off_Received__c</fullName>
    <defaultValue>false</defaultValue>
    <description>Customer sign-off has been received.</description>
    <inlineHelpText>Select when the customer sign-off has been received and a copy has been added as an attachment.</inlineHelpText>
    <label>Sign-Off Received</label>
    <type>Checkbox</type>
</CustomField>