force-app/main/default/objects/NI_Documentation__c/fields/Solution_Details__c.field-meta.xml
<CustomField>
    <fullName>Solution_Details__c</fullName>
    <description>Full details of the solution</description>
    <encryptionScheme>None</encryptionScheme>
    <inlineHelpText>Enter the full details of the solution</inlineHelpText>
    <label>Solution Details</label>
    <length>32768</length>
    <type>LongTextArea</type>
</CustomField>