force-app/main/default/objects/NI_Documentation__c/fields/Target_Org_Corp_Admin__c.field-meta.xml
<CustomField>
    <fullName>Target_Org_Corp_Admin__c</fullName>
    <deleteConstraint>SetNull</deleteConstraint>
    <description>Designates who is the Corporate Admin in the Target Org. Used for default User mapping when needed.</description>
    <inlineHelpText>ho is the Corp Admin in the Target Org?</inlineHelpText>
    <label>Target Org Corp Admin</label>
    <referenceTo>Contact</referenceTo>
    <relationshipLabel>NI Documentation (Target Org Corp Admin)</relationshipLabel>
    <relationshipName>NI_Documentation3</relationshipName>
    <type>Lookup</type>
</CustomField>