force-app/main/default/objects/NI_Documentation__c/fields/Vendor_Version__c.field-meta.xml
<CustomField>
    <fullName>Vendor_Version__c</fullName>
    <description>Salesforce.com Change Request: NICC-007494</description>
    <encryptionScheme>None</encryptionScheme>
    <inlineHelpText>Enter the Vendor Version</inlineHelpText>
    <label>Vendor Version</label>
    <length>255</length>
    <type>Text</type>
</CustomField>