force-app/main/default/objects/NI_Documentation__c/recordTypes/AH_UDC_Workbook.recordType-meta.xml
<RecordType>
    <fullName>AH_UDC_Workbook</fullName>
    <active>true</active>
    <description>Used by Unified Data Collection to manage Workbooks</description>
    <label>Unified Data Collection - Workbook</label>
</RecordType>