force-app/main/default/objects/NI_Documentation__c/recordTypes/Delphi_PMS_RMS_Integration_Documentation.recordType-meta.xml
<RecordType>
    <fullName>Delphi_PMS_RMS_Integration_Documentation</fullName>
    <active>true</active>
    <description>Used for PMS and RMS Integration Documentation</description>
    <label>Integration Services Documentation</label>
</RecordType>