force-app/main/default/objects/NI_Documentation__c/recordTypes/HRM_Configuration.recordType-meta.xml
<RecordType>
    <fullName>HRM_Configuration</fullName>
    <active>true</active>
    <description>Used to document HRM customer configurations</description>
    <label>HRM Configuration</label>
</RecordType>