force-app/main/default/objects/NI_Documentation__c/recordTypes/HRM_Documentation.recordType-meta.xml
<RecordType>
    <fullName>HRM_Documentation</fullName>
    <active>true</active>
    <description>Used for HRM Documentation</description>
    <label>HRM Documentation</label>
</RecordType>