force-app/main/default/objects/NI_Documentation__c/recordTypes/HRM_Solutions_Database.recordType-meta.xml
<RecordType>
    <fullName>HRM_Solutions_Database</fullName>
    <active>true</active>
    <description>Used by the HRM team to track solutions</description>
    <label>HRM Solutions Database</label>
</RecordType>