force-app/main/default/objects/NI_Documentation__c/recordTypes/PLCM_Migrations.recordType-meta.xml
<RecordType>
    <fullName>PLCM_Migrations</fullName>
    <active>true</active>
    <description>Used by Platform Life Cycle Management team to manage migration projects.</description>
    <label>PLCM Migrations</label>
</RecordType>