force-app/main/default/objects/NI_Documentation__c/recordTypes/PLCM_MM_Conversion.recordType-meta.xml
<RecordType>
    <fullName>PLCM_MM_Conversion</fullName>
    <active>true</active>
    <description>PLCM MM Conversion&quot; API: AH_PLCM_MM_Conversion</description>
    <label>PLCM MM Conversion</label>
</RecordType>