force-app/main/default/objects/NI_Documentation__c/recordTypes/PLCM_S_E_Extract_Append.recordType-meta.xml
<RecordType>
    <fullName>PLCM_S_E_Extract_Append</fullName>
    <active>true</active>
    <description>Used by Platform Life Cycle Management team to manage S&amp;E Extract Append migration projects.</description>
    <label>PLCM S&amp;E Extract Append</label>
</RecordType>