force-app/main/default/objects/NI_Documentation__c/recordTypes/PreSales_Documentation.recordType-meta.xml
<RecordType>
    <fullName>PreSales_Documentation</fullName>
    <active>true</active>
    <description>Used for Pre-Sales Documentation</description>
    <label>Sales/CSM Documentation</label>
</RecordType>