force-app/main/default/objects/NI_Documentation__c/recordTypes/Professional_Services_Documentation.recordType-meta.xml
<RecordType>
    <fullName>Professional_Services_Documentation</fullName>
    <active>true</active>
    <description>Used for Professional Services Documentation</description>
    <label>Professional Services Documentation</label>
</RecordType>