force-app/main/default/objects/NI_Documentation__c/recordTypes/Property_Management_Documentation.recordType-meta.xml
<RecordType>
    <fullName>Property_Management_Documentation</fullName>
    <active>true</active>
    <description>Used for Property Management Documentation</description>
    <label>Property Management Documentation</label>
</RecordType>