force-app/main/default/objects/NI_Documentation__c/recordTypes/Systems_Engineering_Documentation.recordType-meta.xml
<RecordType>
    <fullName>Systems_Engineering_Documentation</fullName>
    <active>true</active>
    <description>Used for System Engineering Documentation</description>
    <label>Systems Engineering Documentation</label>
</RecordType>