force-app/main/default/objects/NI_Documentation__c/validationRules/BE5_Upgrades_Required_Fields.validationRule-meta.xml
<ValidationRule>
    <fullName>BE5_Upgrades_Required_Fields</fullName>
    <active>true</active>
    <description>NICC-063759; Requires certain fields to be populated for BE5 Upgrade projects as they are needed to run aspects of automated email alerts.</description>
    <errorConditionFormula>RecordType.DeveloperName = &quot;PLCM_Migrations&quot; &amp;&amp;
ISPICKVAL( AH_PLCM_Product__c , &quot;BE4 to BE5 Upgrade&quot;) &amp;&amp;

OR( ISBLANK( BE4_Upgrade_Email_Address__c ) ,
ISPICKVAL( Region__c , &quot;&quot;) ,
ISBLANK( Account_Manager__c ),
ISPICKVAL( Account_Segment__c , &quot;&quot;),
ISPICKVAL( Integration_Type__c , &quot;&quot;),
ISPICKVAL( Private_Offer_Enabled__c , &quot;&quot;),
ISPICKVAL( Vanity_URL__c , &quot;&quot;)
)</errorConditionFormula>
    <errorMessage>Please confirm the following required fields are populated: BE4 Upgrade Email Address, Region, Account Manager, Account Segment, Integration Type, Private Offer Enabled and Vanity URL.</errorMessage>
</ValidationRule>