force-app/main/default/objects/NI_Documentation__c/validationRules/Document_Type_Required.validationRule-meta.xml
<ValidationRule>
    <fullName>Document_Type_Required</fullName>
    <active>true</active>
    <description>Salesforce.com Change Request: NICC-007494</description>
    <errorConditionFormula>AND(OR(RecordType.Name =&quot;Delphi PMS/RMS Integration Documentation&quot;,RecordType.Name =&quot;HRM Documentation&quot;,RecordType.Name =&quot;Professional Services Documentation&quot;,RecordType.Name =&quot;Systems Engineering Documentation&quot;),ISPICKVAL(Document_Type__c,&quot;&quot;))</errorConditionFormula>
    <errorDisplayField>Document_Type__c</errorDisplayField>
    <errorMessage>You must select a Document Type</errorMessage>
</ValidationRule>