force-app/main/default/objects/NI_Documentation__c/validationRules/Final_Approver_Required_Services_SOW.validationRule-meta.xml
<ValidationRule>
    <fullName>Final_Approver_Required_Services_SOW</fullName>
    <active>true</active>
    <description>Salesforce.com Change Request: NICC-007357

If the Document Type is Services SOW, the Final Approver field must be filled-in</description>
    <errorConditionFormula>AND(ISPICKVAL(Document_Type__c, &quot;Services SOW&quot;),  ISBLANK(Final_Approver__c))</errorConditionFormula>
    <errorDisplayField>Final_Approver__c</errorDisplayField>
    <errorMessage>You must choose a Final Approver for this record</errorMessage>
</ValidationRule>