force-app/main/default/objects/NI_Documentation__c/validationRules/FollowUp.validationRule-meta.xml
<ValidationRule>
    <fullName>FollowUp</fullName>
    <active>true</active>
    <description>Salesforce.com Change Request: NICC-007494

If follow-up required field is selected, description of the outstanding issues must be added</description>
    <errorConditionFormula>AND( Follow_Up_Required__c =True, ISBLANK(Outstanding_Issues__c ))</errorConditionFormula>
    <errorMessage>When follow-up required field is selected a description of the outstanding issue is required.</errorMessage>
</ValidationRule>