force-app/main/default/objects/NI_Documentation__c/validationRules/Integration_Type_Rule.validationRule-meta.xml
<ValidationRule>
    <fullName>Integration_Type_Rule</fullName>
    <active>true</active>
    <description>Salesforce.com Change Request: NICC-007494

If record type = integrations recap and the document type = recap, the integration type must be filled in.Please select integration type</description>
    <errorConditionFormula>AND( RecordType.Name =&quot;Integration Services Documentation&quot;, ISPICKVAL( Document_Type__c , &quot;Recap&quot;), OR(  ISPICKVAL(Integration_Type__c,&quot;&quot; ), Vendor_Version__c =&quot;&quot;))</errorConditionFormula>
    <errorMessage>For recaps integration type and vendor version must be filled in</errorMessage>
</ValidationRule>