force-app/main/default/objects/NI_Documentation__c/validationRules/Milestone_Required.validationRule-meta.xml
<ValidationRule>
    <fullName>Milestone_Required</fullName>
    <active>true</active>
    <description>Salesforce.com Change Request: NICC-007494</description>
    <errorConditionFormula>AND(OR(RecordType.Name =&quot;Delphi PMS/RMS Integration Documentation&quot;,RecordType.Name =&quot;HRM Documentation&quot;,RecordType.Name =&quot;Professional Services Documentation&quot;,RecordType.Name =&quot;Systems Engineering Documentation&quot;),NOT(ISBLANK(Project__c)),ISBLANK(Milestone__c))</errorConditionFormula>
    <errorDisplayField>Milestone__c</errorDisplayField>
    <errorMessage>You must select a Milestone</errorMessage>
</ValidationRule>