force-app/main/default/objects/NI_Documentation__c/listViews/AH_UDC_MyUDCWorkbooksSentDueNext7Days.listView-meta.xml
<ListView>
    <fullName>AH_UDC_MyUDCWorkbooksSentDueNext7Days</fullName>
    <columns>NAME</columns>
    <columns>Document_Name__c</columns>
    <columns>AH_UDC_WorkbookDueDate__c</columns>
    <columns>AH_UDC_PropertyName__c</columns>
    <columns>AH_UDC_PropertyAccountLink__c</columns>
    <columns>CREATED_DATE</columns>
    <columns>CREATEDBY_USER</columns>
    <columns>OWNER.FIRST_NAME</columns>
    <columns>OWNER.LAST_NAME</columns>
    <columns>Account__c</columns>
    <filterScope>Everything</filterScope>
    <filters>
        <field>RECORDTYPE</field>
        <operation>equals</operation>
        <value>NI_Documentation__c.AH_UDC_Workbook</value>
    </filters>
    <filters>
        <field>AH_UDC_WorkbookDueDate__c</field>
        <operation>lessOrEqual</operation>
        <value>NEXT_N_DAYS:7</value>
    </filters>
    <label>My UDC Workbooks Sent Due Next 7 Days</label>
</ListView>