force-app/main/default/objects/NI_Documentation__c/listViews/AH_UDCMyUDCWorkbooks.listView-meta.xml
<ListView>
    <fullName>AH_UDCMyUDCWorkbooks</fullName>
    <columns>NAME</columns>
    <columns>Document_Name__c</columns>
    <columns>AH_UDC_WorkbookDueDate__c</columns>
    <columns>AH_UDC_PropertyAccount__c</columns>
    <columns>AH_UDC_PropertyName__c</columns>
    <columns>CREATED_DATE</columns>
    <columns>CREATEDBY_USER</columns>
    <columns>OWNER.FIRST_NAME</columns>
    <columns>OWNER.LAST_NAME</columns>
    <filterScope>Mine</filterScope>
    <filters>
        <field>RECORDTYPE</field>
        <operation>equals</operation>
        <value>NI_Documentation__c.AH_UDC_Workbook</value>
    </filters>
    <label>My UDC Workbooks</label>
</ListView>