force-app/main/default/objects/NI_Documentation__c/listViews/All.listView-meta.xml
<ListView>
    <fullName>All</fullName>
    <columns>NAME</columns>
    <columns>RECORDTYPE</columns>
    <columns>Document_Type__c</columns>
    <columns>Document_Name__c</columns>
    <columns>Account__c</columns>
    <columns>Opportunity__c</columns>
    <columns>Project__c</columns>
    <columns>Milestone__c</columns>
    <columns>CREATEDBY_USER</columns>
    <columns>CREATED_DATE</columns>
    <columns>Stage__c</columns>
    <columns>Project_Manager__c</columns>
    <filterScope>Everything</filterScope>
    <filters>
        <field>RECORDTYPE</field>
        <operation>equals</operation>
        <value>NI_Documentation__c.PLCM_MM_Conversion,NI_Documentation__c.PLCM_Migrations,NI_Documentation__c.PLCM_S_E_Extract_Append</value>
    </filters>
    <label>All</label>
    <sharedTo>
        <allInternalUsers/>
    </sharedTo>
</ListView>