force-app/main/default/objects/NI_Documentation__c/listViews/HRM_Solutions_Database.listView-meta.xml
<ListView>
    <fullName>HRM_Solutions_Database</fullName>
    <columns>NAME</columns>
    <columns>Document_Name__c</columns>
    <columns>Description__c</columns>
    <filterScope>Everything</filterScope>
    <filters>
        <field>RECORDTYPE</field>
        <operation>equals</operation>
        <value>NI_Documentation__c.HRM_Solutions_Database</value>
    </filters>
    <label>HRM Solutions Database</label>
    <sharedTo>
        <role>ClientServices</role>
        <role>SystemsEngineeringIntegration</role>
    </sharedTo>
</ListView>