force-app/main/default/objects/NI_Documentation__c/listViews/PM_Corporate_Standards.listView-meta.xml
<ListView>
    <fullName>PM_Corporate_Standards</fullName>
    <columns>NAME</columns>
    <columns>Account__c</columns>
    <columns>Document_Name__c</columns>
    <columns>Status__c</columns>
    <filterScope>Everything</filterScope>
    <filters>
        <field>Document_Type__c</field>
        <operation>equals</operation>
        <value>Corporate Standards</value>
    </filters>
    <label>Corporate Standards</label>
    <sharedTo>
        <role>ClientServices</role>
    </sharedTo>
</ListView>