force-app/main/default/objects/NI_Documentation__c/listViews/Pre_Sales_Documentation.listView-meta.xml
<ListView>
    <fullName>Pre_Sales_Documentation</fullName>
    <columns>NAME</columns>
    <columns>Document_Type__c</columns>
    <columns>Document_Name__c</columns>
    <columns>Account__c</columns>
    <columns>Opportunity__c</columns>
    <columns>Stage__c</columns>
    <columns>First_Target_Date__c</columns>
    <columns>Final_Target_Date__c</columns>
    <columns>Approval_Status__c</columns>
    <columns>Final_Approver__c</columns>
    <columns>CREATEDBY_USER</columns>
    <columns>CREATED_DATE</columns>
    <filterScope>Everything</filterScope>
    <filters>
        <field>RECORDTYPE</field>
        <operation>equals</operation>
        <value>NI_Documentation__c.PreSales_Documentation</value>
    </filters>
    <label>Pre-Sales Documentation</label>
    <sharedTo>
        <allInternalUsers></allInternalUsers>
    </sharedTo>
</ListView>