force-app/main/default/objects/NI_Documentation__c/listViews/PS_Documentation_Created_Today.listView-meta.xml
<ListView>
    <fullName>PS_Documentation_Created_Today</fullName>
    <booleanFilter>(1 OR 2) AND 3</booleanFilter>
    <columns>NAME</columns>
    <columns>RECORDTYPE</columns>
    <columns>Document_Type__c</columns>
    <columns>Document_Name__c</columns>
    <columns>Account__c</columns>
    <columns>Opportunity__c</columns>
    <columns>Project__c</columns>
    <columns>Milestone__c</columns>
    <columns>CREATEDBY_USER</columns>
    <columns>CREATED_DATE</columns>
    <columns>Stage__c</columns>
    <columns>Project_Manager__c</columns>
    <filterScope>Everything</filterScope>
    <filters>
        <field>RECORDTYPE</field>
        <operation>equals</operation>
        <value>NI_Documentation__c.Professional_Services_Documentation,NI_Documentation__c.Delphi_PMS_RMS_Integration_Documentation</value>
    </filters>
    <filters>
        <field>RECORDTYPE</field>
        <operation>equals</operation>
        <value>NI_Documentation__c.HRM_Documentation,NI_Documentation__c.Systems_Engineering_Documentation</value>
    </filters>
    <filters>
        <field>CREATED_DATE</field>
        <operation>equals</operation>
        <value>TODAY</value>
    </filters>
    <label>PS Documentation Created Today</label>
    <sharedTo>
        <allInternalUsers></allInternalUsers>
    </sharedTo>
</ListView>