force-app/main/default/objects/NI_Documentation__c/listViews/Systems_Engineering_Documentation.listView-meta.xml
<ListView>
    <fullName>Systems_Engineering_Documentation</fullName>
    <columns>NAME</columns>
    <columns>Document_Type__c</columns>
    <columns>Document_Name__c</columns>
    <columns>Account__c</columns>
    <columns>Opportunity__c</columns>
    <columns>Project__c</columns>
    <columns>Milestone__c</columns>
    <columns>CREATEDBY_USER</columns>
    <columns>CREATED_DATE</columns>
    <columns>Stage__c</columns>
    <columns>Project_Manager__c</columns>
    <filterScope>Everything</filterScope>
    <filters>
        <field>RECORDTYPE</field>
        <operation>equals</operation>
        <value>NI_Documentation__c.Systems_Engineering_Documentation</value>
    </filters>
    <label>Systems Engineering Documentation</label>
    <sharedTo>
        <allInternalUsers/>
    </sharedTo>
</ListView>